# grafana-dashboard-builder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  NOTICE  PLANNING.md  README.md  TASKS.md  docker-compose.yaml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml  publish-to-pypi.yml  ruff.yml  type_check.yaml  uv-lock-check.yml
grafana_dashboards/: __init__.py  builder.py  cli.py  common.py  config.py  context.py  errors.py  exporter.py  gdbyaml.py  parser.py
grafana_dashboards/client/: __init__.py  connection.py  elastic_search.py  grafana.py
grafana_dashboards/components/: __init__.py  annotations.py  axes.py  base.py  dashboards.py  elastic_graph.json  links.py  panels.py  projects.py  prometheus_graph.json  rows.py  targets.py  templates.py
samples/: HomeDashboard.yaml  bar.yaml  config.yaml  elastic.yaml  env.yaml  influxdb.yaml  project.yaml  prometheus.yaml
tests/grafana_dashboards/: config.yaml  smoke_test.py  test_cli.py  test_config.py  test_context.py  test_exporter.py
tests/grafana_dashboards/client/: test_connection.py  test_elastic_search.py  test_grafana.py
tests/grafana_dashboards/components/: test_base.py  test_components.py  test_projects.py
tests/grafana_dashboards/components/absolute-link/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/annotation/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/annotations/: defaults.yaml  full.json  full.yaml  reference.json  reference.yaml
tests/grafana_dashboards/components/bar-gauge/: defaults.json  defaults.yaml  field_options.json  field_options.yaml
tests/grafana_dashboards/components/custom/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/custom-template/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/dashboard/: defaults.json  defaults.yaml  full.json  full.yaml  referenced_rows.json  referenced_rows.yaml  rows.json  rows.yaml
tests/grafana_dashboards/components/dashboard-link/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/dashlist/: defaults.json  defaults.yaml  full.json  full.yaml  only_search.json  only_search.yaml
tests/grafana_dashboards/components/datasource-template/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/elastic-target/: defaults.json  defaults.yaml  full.json  full.yaml  full_with_alias.json  full_with_alias.yaml
tests/grafana_dashboards/components/gauge/: defaults.json  defaults.yaml  field_options.json  field_options.yaml
tests/grafana_dashboards/components/graph/: defaults.json  defaults.yaml  full.json  full.yaml  y_axis_default.json  y_axis_default.yaml  y_axis_grid_max.json  y_axis_grid_max.yaml  y_axis_grid_min.json  y_axis_grid_min.yaml  y_formats_defaults.json  y_formats_defaults.yaml
tests/grafana_dashboards/components/graphite-target/: full.json  full.yaml  simple.json  simple.yaml
tests/grafana_dashboards/components/influxdb-target/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/interval-template/: defaults.json  defaults.yaml  full.json  full.yaml  full_with_auto.json  full_with_auto.yaml  full_with_auto_not_current.json  full_with_auto_not_current.yaml  full_with_default_auto.json  full_with_default_auto.yaml
tests/grafana_dashboards/components/links/: defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/panels/: defaults.yaml  full.json  full.yaml  reference.json  reference.yaml
tests/grafana_dashboards/components/prometheus-target/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/query/: defaults.json  defaults.yaml  defaults_multiquery.json  defaults_singlequery.json  defaults_singlequery.yaml  empty.yaml  full.json  full.yaml  full_multiquery.json  full_multiquery.yaml  full_singlequery.json  full_singlequery.yaml  singlequery_with_refresh.json  singlequery_with_refresh.yaml
tests/grafana_dashboards/components/row/: defaults.json  defaults.yaml  full.json  full.yaml  panels.json  panels.yaml
tests/grafana_dashboards/components/rows/: defaults.yaml  full.json  full.yaml  reference.json  reference.yaml
tests/grafana_dashboards/components/single-stat/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/stat/: defaults.json  defaults.yaml  field_options.json  field_options.yaml
tests/grafana_dashboards/components/table/: defaults.json  row_color_mode.json  row_color_mode.yaml  time_series_aggregations.json  time_series_aggregations.yaml
tests/grafana_dashboards/components/targets/: defaults.yaml  full.json  full.yaml  reference.json  reference.yaml
tests/grafana_dashboards/components/templates/: full.json  full.yaml  reference.json  reference.yaml
tests/grafana_dashboards/components/text/: defaults.json  defaults.yaml  full.json  full.yaml
tests/grafana_dashboards/components/yaxes/: compat.json  compat.yaml  defaults.yaml  full.json  full.yaml  reference.json  reference.yaml  single.yaml
tests/grafana_dashboards/components/yaxis/: defaults.json  defaults.yaml  full.json  full.yaml
