[project]
name = "grafana-dashboard-builder"
version = "0.10.0a3"
description = "Generate Grafana dashboards with YAML"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argparse",
    "requests",
    "requests-kerberos",
    "PyYAML>=5.3",
]
keywords = ["grafana yaml graphite prometheus influxdb"]
authors = [
    {name = "Jakub Plichta", email = "jakub.plichta@gmail.com"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
license-files = [
    "LICENSE",
    "NOTICE",
    "AUTHORS",
]

[project.urls]
Homepage = "https://github.com/jakubplichta/grafana-dashboard-builder"

[project.scripts]
grafana-dashboard-builder = "grafana_dashboards.cli:main"
"grafana_dashboard_builder.py" = "grafana_dashboards.cli:main"

[dependency-groups]
dev = [
    "mock>=5.2.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.3",
    "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "grafana_dashboards",
    "grafana_dashboards.client",
    "grafana_dashboards.components"
]

[tool.tox]
requires = ["tox>=4.31.0"]
env_list = ["pep8", "py3.9", "py3.10", "py3.11", "py3.12", "py3.13", "py3.14"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pytest", "--cov=grafana_dashboards"]]

[tool.tox.env.pep8]
description = "Run code style checks"
commands = [["flake8", "grafana_dashboards", "tests"]]

[tool.flake8]
max-line-length = 160
show-source = true
exclude = [".tox", "dist", "build", "*.egg", "venv", ".venv"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 160

[tool.ruff.lint]
#select = ["E", "F", "UP", "B", "SIM", "I"]
select = ["E", "F"]
ignore = []
preview = true
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
